--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -14,4 +14,11 @@ rmd_files: ["index.Rmd",
 new_session: no
 book_filename: "IDS-bacteriology-pipelines.Rmd"
 delete_merged_file: true
-output_dir: "IDS-bacteriology_pipelines_manual"
+output_dir: "docs"
+language:
+  label:
+    fig: "FIGURE "
+    tab: "TABLE "
+  ui:
+    edit: "Edit"
+    chapter_name: "Chapter "
