Correcting typos in Juno-amr and adding it to final book. Also added Juno logo to TOC

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,6 +4,7 @@ rmd_files: ["index.Rmd",
   "Section_Juno_pipelines.Rmd", 
   "Juno-assembly.Rmd", 
   "Juno-typing.Rmd", 
+  "Juno-amr.Rmd",
   "Juno-annotation.Rmd", 
   "Section_other_pipelines.Rmd", 
   "Mycobacterium_lofreq.Rmd", 
