--- a/_output.yaml
+++ b/_output.yaml
@@ -8,7 +8,7 @@ bookdown::gitbook:
       scroll_highlight: yes
       before:  |
         <li><a href="./">Bioinformatics Pipelines for Bacteriology (IDS, RIVM)</a></li>  |
-        <li class="toc-logo"><a href="./"><img src="figures/juno-logo.png" width="100%"></a></li>
+        <li class="toc-logo"><a href="./"><img src="figures/juno_logo/juno_light/juno_bgp_lightbg.png" width="100%"></a></li>
       after: |
         <li>IDS-bioinformatics team - Juno team</li>
     toolbar:
