Fixed error and added cgmlst to the toc

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,6 +5,7 @@ rmd_files: ["index.Rmd",
   "Juno-assembly.Rmd", 
   "Juno-typing.Rmd", 
   "Juno-amr.Rmd",
+  "Juno_cgmlst.Rmd",
   "Juno-annotation.Rmd", 
   "Juno_blast.Rmd",
   "Section_other_pipelines.Rmd", 
