--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -6,6 +6,7 @@ rmd_files: ["index.Rmd",
   "Juno-typing.Rmd", 
   "Juno-amr.Rmd",
   "Juno_cgmlst.Rmd",
+  "Juno_snp.Rmd",
   "Juno-annotation.Rmd", 
   "Juno_blast.Rmd",
   "Section_other_pipelines.Rmd", 
